Fix content shift when doing animations by using a delay (#285)

--- a/client/src/styles/gameboard.css
+++ b/client/src/styles/gameboard.css
@@ -150,7 +150,7 @@ body {
   max-height: 100%;
   font-size: 2.5vmin;
   z-index: 3;
-  transition: font-size 0.3s;
+  transition: font-size 0.01s;
 }
 
 .player-inventory.shrink {
